src/Korobi/WebBundle/Resources/assets/sass/application/_header.scss
// Written by lol768 (from another project). Would appreciate it if you asked before using this in something public.

$active-nav-background-color: darken($primaryColour, 10%);

nav.navigation {
  width: 100%;
  min-height: 3em;
  line-height: 1em;
  background-color: $primaryColour;
  padding: 0 1em 0 1em;
  //border-bottom: 1px solid $active-nav-background-color;

  .navigation--inner {
    @include outer-container;
  }

  .navigation--menutoggle {
    color: #fff;
    display: none;
    font-size: 1.5em;
    line-height: 2em;
    margin-left: 0.5em;
    float: right;
    cursor: pointer;
  }

  .navigation--brand-mobile {
    display: none;
    margin-left: 1em;
  }

  .navigation--brand {
    display: inline-block;
    float: left;
    //font-size: 2.5em;
    max-height: 3em;
    margin-right: 0.8em;

    a {
      font-size: 1em;
    }
  }

  .navigation--brandlink {
    color: #fff;
    font-size: 1em;
    font-weight: bold;
    line-height: 3em;
    text-decoration: none;
  }

  ul.navigation--links {
    float: left;

    li {
      display: inline-block;

      a {
        display: inline-block;
        padding: 1em;
        color: #eee;
        text-decoration: none;
        @include transition(all 0.3s);
      }

      a:hover,
      a:focus {
        background-color: $active-nav-background-color;
      }
    }

    li.active {
      a {
        background-color: $active-nav-background-color;
      }
    }

    li + li {
      margin-left: -4px;
    }
  }

  ul.navigation--links-secondary {
    float: right;
  }
}

nav.navigation:after {
  content: "";
  display: table;
  clear: both;
}

@media (max-width: $medium-screen) {
  nav.navigation {
    padding-left: 0;
    padding-right: 0;
  }

  nav.navigation.navigation--admin {
    display: none;
  }

  .navigation--brand a.navigation--brandlink {
    display: none;
  }

  .navigation--menutoggle {
    display: block !important;
  }

  nav.navigation > .navigation--inner > .navigation--brand {
    float: right;
  }

  nav.navigation ul.navigation--links > li {
    display: none;
    margin-left: 0 !important;
  }

  nav.navigation > .navigation--brand {
    margin-right: 1em;
  }

  nav.navigation .navigation--inner > ul,
  nav.navigation .navigation--inner > ul > li,
  nav.navigation .navigation--inner > ul > li > a {
    width: 100% !important;
  }

  nav.navigation > .navigation--inner > .navigation--brand-mobile {
    display: inline-block;
    float: left;
  }

  nav.navigation > .navigation--inner > ul.navigation--links {
    float: none;
  }

  nav.navigation.on-mobile > .navigation--inner {
    ul.navigation--links > li {
      display: list-item !important;
    }

    .navigation--brand-mobile {
      float: left;
    }
  }
}

